--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
     <div id="response">YAY!!! You said yes! 😍❤️<br>Best Valentine ever! 💕</div>
 
     <div id="polarImage">
-        <img src="https://static.wikia.nocookie.net/polarexpress/images/a/a0/HeroGirl.jpg/revision/latest?cb=20130101002719" alt="Hero Girl from The Polar Express on the train">
+        <img src="https://i.imgur.com/0ZfZfZf.jpg" alt="Hero Girl from The Polar Express on the train">
     </div>
 
     <div class="hearts" id="heartsContainer"></div>
