Add Hero Girl image and update reference in HTML

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
     <div id="response">YAY!!! You said yes! 😍❤️<br>Best Valentine ever! 💕</div>
 
     <div id="polarImage">
-        <img src="https://i.imgur.com/0ZfZfZf.jpg" alt="Hero Girl from The Polar Express on the train">
+        <img src="hero-girl.jpg" alt="Hero Girl from The Polar Express on the train">
     </div>
 
     <div class="hearts" id="heartsContainer"></div>
