--- a/index.html
+++ b/index.html
@@ -335,8 +335,11 @@
 
     <!-- Win Screen -->
     <div id="winScreen" class="hidden">
-        <!-- Flork meme image -->
-        <img class="flork-img" src="flork.png" alt="Flork meme with hearts"/>
+        <!-- Flork meme gallery -->
+        <div class="flork-gallery" style="display: flex; gap: 20px; justify-content: center; align-items: center; flex-wrap: wrap; margin-bottom: 16px;">
+            <img class="flork-img" src="flork.png" alt="Flork meme with hearts"/>
+            <img class="flork-img" src="flork-knife.jpg" alt="Flork meme" style="animation-delay: 0.3s;"/>
+        </div>
         <p class="win-text">YAY!!! 😍❤️</p>
         <button class="back-btn" onclick="backToMenu()" style="color: rgba(248,200,216,0.7); border-color: rgba(255,255,255,0.2);">Play Again</button>
     </div>
